--- a/D2WinDivert/D2WinDivert.vcxproj
+++ b/D2WinDivert/D2WinDivert.vcxproj
@@ -86,10 +86,10 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>C:\Users\EugW\source\repos\D2WinDivert\D2WinDivert\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Administrator\source\repos\D2WinDivert\D2WinDivert\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>C:\Users\EugW\source\repos\D2WinDivert\D2WinDivert\include\WinDivert.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>C:\Users\Administrator\source\repos\D2WinDivert\D2WinDivert\include\WinDivert.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>
       </SubSystem>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
@@ -110,10 +110,10 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <AdditionalIncludeDirectories>C:\Users\EugW\source\repos\D2WinDivert\D2WinDivert\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Administrator\source\repos\D2WinDivert\D2WinDivert\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>C:\Users\EugW\source\repos\D2WinDivert\D2WinDivert\include\WinDivert.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>C:\Users\Administrator\source\repos\D2WinDivert\D2WinDivert\include\WinDivert.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>
       </SubSystem>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
